[package]
name = "deep-rusty-mario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.16.4"
features = ["auto-initialize", "serde"]

[dependencies.dict_derive]
version = "0.4.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
